Added user authentication

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,13 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+FACEBOOK_APP_ID=
+FACEBOOK_SECRET=
+FACEBOOK_REDIRECT=http://localhost/social-auth/facebook/callback
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT=http://localhost/social-auth/github/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT=http://localhost/social-auth/google/callback
