--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "prettus/l5-repository": "^2.1",
         "laravel/socialite": "^2.0",
         "barryvdh/laravel-debugbar": "^2.2",
-        "predis/predis": "^1.0"
+        "predis/predis": "^1.0",
+        "league/commonmark": "0.13"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
