Added slack logger

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ GITHUB_REDIRECT=http://localhost/social-auth/github/callback
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=http://localhost/social-auth/google/callback
+
+SLACK_TOKEN=
