--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+DEFAULT_QUEUE=pn
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
