--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "predis/predis": "^1.0",
         "league/commonmark": "0.13",
         "edvinaskrucas/notification": "^5.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "league/fractal": "^0.13.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
