Added client support

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,7 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=http://localhost/social-auth/google/callback
 
 SLACK_TOKEN=
+
+CLIENT_DOMAIN=localhost
+WIN_CLIENT_VERSION=0.0.0.0
+OSX_CLIENT_VERSION=0.0.0.0
