--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "league/commonmark": "0.13",
         "edvinaskrucas/notification": "^5.1",
         "doctrine/dbal": "^2.5",
-        "league/fractal": "^0.13.0"
+        "league/fractal": "^0.13.0",
+        "jenssegers/agent": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
