--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost:8000
+APP_DOMAIN=localhost
 
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
