--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "league/fractal": "^0.13.0",
         "jenssegers/agent": "^2.3",
         "mastergalen/adsense-ads": "^0.1.2",
-        "ikkentim/wikiclone": "^0.4.0"
+        "ikkentim/wikiclone": "^0.4.0",
+        "knplabs/github-api": "^1.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
