--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ GITHUB_REDIRECT=http://localhost/social-auth/github/callback
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=http://localhost/social-auth/google/callback
+STEAM_CLIENT_ID=
 
 SLACK_TOKEN=
 
