Added first workshop scraper

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "mastergalen/adsense-ads": "^0.1.2",
         "ikkentim/wikiclone": "^0.4.0",
         "knplabs/github-api": "^1.6",
-        "invisnik/laravel-steam-auth": "^2.0"
+        "invisnik/laravel-steam-auth": "^2.0",
+        "weidner/goutte": "@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
