Unit Test rewrite
* Implemented User Unit Test

- redid job unit test
- redid controller unit test
- changed to UserRepo Facade in SocialAuthController
- redid travis script
- deleted repository test
- re-implmented job test for Media, Screenshots
- created a duplicate park to test by because ParkExtractor deletes park
- removed Factory Trait
- redid unit test for Tag test
- implemented codeception
- seperated test out

* tweak .travis.yml

* cleaned up formatting

* added screenshot functional test

* fixed composer.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,40 @@
+dist: trusty
+sudo: required
+
+env:
+  - TEST_SUITE=unit
+  - TEST_SUITE=functional
+
 language: php
 
 php:
   - 7.0
 
+install:
+  - 'if [ "${TEST_SUITE}" = "functional" ]; then
+      . $HOME/.nvm/nvm.sh;
+      nvm install stable;
+      nvm use stable;
+      node -v;
+      npm install -g npm@latest;
+      npm install -g bower;
+      npm install -g gulp;
+      bower install;
+      npm install;
+      npm -v;
+    fi'
+  - sudo apt-get install mono-complete
+  - mono --version
+
 before_script:
-  - sudo apt-get install -y mono-complete
-  - cp .env.travis .env
-  - mysql -e 'create database parkitectnexus_test;'
+  - cp .env.testing .env
+  - mysql -e 'create database parkitect;'
   - composer self-update
   - composer install --no-interaction
-  - php artisan migrate --force
-
+  - php artisan migrate --force;
+  - 'if [ "${TEST_SUITE}" = "functional" ]; then
+     bower install;
+     gulp;
+    fi'
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/codecept run ${TEST_SUITE}
