--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,14 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "^0.9.6",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "codeception/codeception": "^2.2",
+        "league/factory-muffin": "^3.0",
+        "league/factory-muffin-faker": "^1.0",
+        "tightenco/mailthief": "^0.3.3"
     },
     "repositories": [
         {
@@ -51,9 +55,6 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
     },
     "scripts": {
         "post-root-package-install": [
