--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ language: php
 
 php:
   - 7.0
+  - 7.1
 
 install:
   - 'if [ "${TEST_SUITE}" = "functional" ]; then
@@ -17,11 +18,11 @@ install:
       nvm use stable;
       node -v;
       npm install -g npm@latest;
+      npm install -g yarn;
+      npm -v;
+      yarn --version;
       npm install -g bower;
       npm install -g gulp;
-      bower install;
-      npm install;
-      npm -v;
     fi'
   - sudo apt-get install mono-complete
   - mono --version
@@ -33,8 +34,9 @@ before_script:
   - composer install --no-interaction
   - php artisan migrate --force;
   - 'if [ "${TEST_SUITE}" = "functional" ]; then
-     bower install;
+     yarn install;
      gulp;
     fi'
+
 script:
   - vendor/bin/codecept run ${TEST_SUITE}
