--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "bower": "^1.7.7",
     "gulp": "^3.9.1",
     "laravel-elixir": "^4.2.1"
