--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.3.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "intervention/image": "^2.3",
         "prettus/l5-repository": "^2.1",
@@ -32,8 +32,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "^0.9.6",
         "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
         "codeception/codeception": "^2.2",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^1.0",
