--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "intervention/image": "^2.3",
         "prettus/l5-repository": "^2.1",
-        "laravel/socialite": "^2.0",
+        "laravel/socialite": "^3.0",
         "barryvdh/laravel-debugbar": "^2.2",
         "predis/predis": "^1.0",
         "league/commonmark": "0.13",
@@ -18,10 +18,10 @@
         "doctrine/dbal": "^2.5",
         "league/fractal": "^0.13.0",
         "jenssegers/agent": "^2.3",
-        "mastergalen/adsense-ads": "^0.1.2",
+        "mastergalen/adsense-ads": "^0.1.4",
         "ikkentim/wikiclone": "^0.4.0",
         "knplabs/github-api": "^1.6",
-        "invisnik/laravel-steam-auth": "dev-master",
+        "invisnik/laravel-steam-auth": "2.*",
         "weidner/goutte": "@dev",
         "maknz/slack": "^1.7",
         "spatie/laravel-backup": "^3.7",
@@ -31,7 +31,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "^0.9.6",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "codeception/codeception": "^2.2",
@@ -42,7 +42,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/ParkitectNexus/laravel-steam-auth.git"
+            "url": "https://github.com/ParkitectNexus/Adsense-Ads.git"
         }
     ],
     "autoload": {
