--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: required
 env:
   - TEST_SUITE=unit
   - TEST_SUITE=functional
+  - TEST_SUITE=acceptance
 
 language: php
 
@@ -33,7 +34,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - php artisan migrate --force;
-  - 'if [ "${TEST_SUITE}" = "functional" ]; then
+  - 'if [ "${TEST_SUITE}" != "unit" ]; then
      yarn install;
      gulp;
     fi'
