--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/ParkitectNexus/Adsense-Ads.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/pollend/notification.git"
         }
     ],
     "autoload": {
