--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "intervention/image": "^2.3",
         "prettus/l5-repository": "^2.1",
         "laravel/socialite": "^3.0",
-        "barryvdh/laravel-debugbar": "^2.2",
+        "barryvdh/laravel-debugbar": "^2.3",
         "predis/predis": "^1.0",
         "league/commonmark": "0.13",
         "edvinaskrucas/notification": "^5.1",
@@ -43,6 +43,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/ParkitectNexus/Adsense-Ads.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/pollend/notification.git"
         }
     ],
     "autoload": {
