--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "maknz/slack": "^1.7",
         "spatie/laravel-backup": "^3.7",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "anhskohbo/no-captcha": "^2.1"
+        "anhskohbo/no-captcha": "^2.1",
+        "laravel-notification-channels/webpush": "^0.2.0",
+        "pusher/pusher-php-server": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
